<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:layout="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="10dp"
            android:orientation="vertical"
            android:paddingRight="10dp">

            <ImageButton
                android:id="@+id/btnAddAvatar"
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:src="@drawable/download" />

            <EditText
                android:id="@+id/editDishName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:background="@null"
                android:hint="@string/enter_dish_name"
                android:textSize="30sp" />

            <EditText
                android:id="@+id/editDescDish"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:background="@null"
                android:hint="@string/desc_dish" />

            <LinearLayout
                android:id="@+id/layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/title_ingredients"
                    android:textSize="25sp" />

                <LinearLayout
                    android:id="@+id/layoutIgre"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/textview_border"
                    android:orientation="vertical">


                    <include layout="@layout/field_add_ingredient" />


                </LinearLayout>

                <TextView
                    android:id="@+id/txtAddIngre"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/add_ingredient" />
            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingTop="10dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/title_Making"
                    android:textSize="25sp" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <include
                        android:id="@+id/test"
                        layout="@layout/field_add_making" />

                    <LinearLayout
                        android:id="@+id/viewAddMaking"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="vertical">


                    </LinearLayout>

                    <TextView
                        android:id="@+id/txtAddMaking"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:text="@string/add_making" />
                </LinearLayout>


                <Button
                    android:id="@+id/btnAddDish"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:text="@string/add_dish" />

            </LinearLayout>


        </LinearLayout>
    </android.support.v4.widget.NestedScrollView>

</LinearLayout>