<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical">

    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fillViewport="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">



            <ImageView
                android:id="@+id/imgDish"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                app:srcCompat="@drawable/download" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/txtDishName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:padding="5dp"
                    android:text="@string/dish_name"
                    android:textColor="@android:color/holo_green_light"
                    android:textSize="30sp" />

                <TextView
                    android:id="@+id/txtDesc"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="5dp"
                    android:text="@string/desc_dish"
                    android:textColor="@android:color/black"
                    android:textSize="10sp" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginTop="10dp"
                    android:background="@android:color/darker_gray" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/txtTitleIngre"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:paddingBottom="10dp"
                    android:text="@string/title_ingredients"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/txtIngredients"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/textview_border"
                    android:paddingLeft="5dp"
                    android:text="@string/hint_ingredient"
                    android:paddingStart="5dp" />


                <TextView
                    android:id="@+id/txtTitleMaking"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:paddingBottom="10dp"
                    android:text="@string/title_Making"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <android.support.v7.widget.RecyclerView
                    android:id="@+id/recycleViewMaking"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                </android.support.v7.widget.RecyclerView>


            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/txtTitleComment"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:text="@string/comment"
                    android:textColor="#000000"
                    android:textSize="20sp"
                    android:textStyle="bold" />
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="10dp"
                    android:orientation="horizontal"
                    android:layout_marginEnd="10dp">

                    <de.hdodenhof.circleimageview.CircleImageView xmlns:app="http://schemas.android.com/apk/res-auto"
                        android:id="@+id/img_profile1"
                        android:layout_width="60dp"
                        android:layout_height="60dp"
                        android:paddingTop="10dp"
                        android:paddingBottom="10dp"
                        android:src="@drawable/ico_user"
                        app:civ_border_color="#FF000000"
                        app:civ_border_width="2dp"
                        tools:srcCompat="@tools:sample/avatars" />

                    <EditText
                        android:id="@+id/edComment"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_margin="4dp"
                        android:layout_marginTop="2dp"
                        android:layout_marginBottom="2dp"
                        android:background="@drawable/comment_border"
                        android:drawableLeft="@drawable/ic_wave"
                        android:hint="@string/hint_cmt"
                        android:paddingLeft="7dp"
                        android:singleLine="true"
                        android:textSize="18sp" />

                    <ImageButton
                        android:id="@+id/btnSend"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:src="@drawable/ic_send"
                        android:visibility="visible" />
                </LinearLayout>

                <include
                    layout="@layout/layout_comment" />
            </LinearLayout>


        </LinearLayout>

    </android.support.v4.widget.NestedScrollView>

</LinearLayout>